Platform/k8s/deployment-template.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: APP_NAME
  namespace: TEAM_NAMESPACE
spec:
  replicas: 1
  selector:
    matchLabels:
      app: APP_NAME
  template:
    metadata:
      labels:
        app: APP_NAME
        tenant: TEAM_NAMESPACE 
    spec:
      containers:
        - name: APP_NAME
          image: IMAGE_PLACEHOLDER
---

apiVersion: v1
kind: Service
metadata:
  name: APP_NAME-service
  namespace: TEAM_NAMESPACE
  labels:
    app: APP_NAME
spec:
  selector:
    app: APP_NAME
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: ClusterIP

---


apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: APP_NAME-route
  namespace: TEAM_NAMESPACE
spec:
  parentRefs:
    - name: traefik-gateway    
      namespace: traefik-system 
  hostnames:
    - "APP_NAME.your-domain-name.com"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: APP_NAME-service
          port: 80
